rename table handler to table renderer in js and html files

--- a/viewStudentDetails.html
+++ b/viewStudentDetails.html
@@ -390,7 +390,7 @@
     <script src="js/app/navigationMenu.js"></script>
     <script src="js/app/tableResizer.js"></script>
     <script src="js/app/requestHandler.js"></script>
-    <script src="js/app/tableHandler.js"></script>
+    <script src="js/app/TableRenderer.js"></script>
     <script src="js/app/viewStudentDetails.js"></script>
 
     <script>
