change all class files as a modules and implemented on all js and html files

--- a/addStudent.html
+++ b/addStudent.html
@@ -257,7 +257,7 @@
         });
       });
     </script>
-    <script src="js/app/requestHandler.js"></script>
-    <script src="js/app/addStudentDetail.js"></script>
+    <script src="js/app/requestHandler.js" type="module"></script>
+    <script src="js/app/addStudentDetail.js" type="module"></script>
   </body>
 </html>
