--- a/viewStudentDetails.html
+++ b/viewStudentDetails.html
@@ -263,9 +263,9 @@
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <script src="js/app/navigationMenu.js"></script>
-    <script src="js/app/tableResizer.js"></script>
-    <script src="js/app/requestHandler.js"></script>
-    <script src="js/app/TableRenderer.js"></script>
-    <script src="js/app/viewStudentDetails.js"></script>
+    <script src="js/app/tableResizer.js" type="module"></script>
+    <script src="js/app/requestHandler.js" type="module"></script>
+    <script src="js/app/TableRenderer.js" type="module"></script>
+    <script src="js/app/viewStudentDetails.js" type="module"></script>
   </body>
 </html>
