change code structure to render web page based on spa concept

--- a/index.html
+++ b/index.html
@@ -123,9 +123,13 @@
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <script src="js/app/navigationMenu.js"></script>
-    <script src="js/app/tableResizer.js" type="module"></script>
-    <script src="js/app/requestHandler.js" type="module"></script>
-    <script src="js/app/TableRenderer.js" type="module"></script>
-    <script src="js/app/viewStudentDetails.js" type="module"></script>
+    <script src="js/app/route.js"></script>
+    <script src="js/app/router.js"></script>
+    <script src="js/app/TableRenderer.js"></script>
+    <script src="js/app/addStudentDetail.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/app/tableResizer.js"></script>
+    <script src="js/app/requestHandler.js"></script>
+    <script src="js/app/viewStudentDetails.js"></script>
   </body>
 </html>
