--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body class="fixed-sidebar no-skin-config full-height-layout">
+  <body>
     <div id="wrapper">
       <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
@@ -21,6 +21,80 @@
                   <span class="text-muted text-xs block">Admin</span>
                 </a>
               </div>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label m-l-xs">Dashboard</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label m-l-xs">Announcements</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label">Departments</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#">CSE</a></li>
+                <li><a href="#">ECE</a></li>
+                <li><a href="#">EEE</a></li>
+                <li><a href="#">MECH</a></li>
+                <li><a href="#">IT</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label">Clubs</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#">Club 1</a></li>
+                <li><a href="#">Club 2</a></li>
+                <li><a href="#">Club 3</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label">Staffs</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#">Staff Profiles</a></li>
+                <li><a href="#">Attendance Data</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label">Students</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#">Attendance Data</a></li>
+                <li><a href="#">Student Profile</a></li>
+                <li><a href="#">Students Academics</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-th-large"></i>
+                <span class="nav-label">Reports</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#">Report 1</a></li>
+                <li><a href="#">Report 2</a></li>
+                <li><a href="#">Report 3</a></li>
+                <li><a href="#">Report 4</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -40,8 +114,8 @@
             <ul class="nav navbar-top-links navbar-right">
               <li>
                 <span class="m-r-sm text-muted welcome-message">
-                  Angel College of Engg & Tech.</span
-                >
+                  <b>Angel College of Engg & Tech.</b>
+                </span>
               </li>
               <li class="dropdown">
                 <button
@@ -131,5 +205,6 @@
     <script src="js/app/tableResizer.js"></script>
     <script src="js/app/requestHandler.js"></script>
     <script src="js/app/viewStudentsDetails.js"></script>
+    <script src="js/app/viewStudentsMarkDetails.js"></script>
   </body>
 </html>
