fixed side menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="fixed-sidebar no-skin-config full-height-layout">
     <div id="wrapper">
       <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
