implementing navigo js for app routing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </a>
               <ul class="nav nav-second-level">
                 <li><a href="#">Attendance Data</a></li>
-                <li><a href="#">Student Profile</a></li>
+                <li><a href="#!AddStudent">Student Profile</a></li>
                 <li><a href="#">Students Academics</a></li>
               </ul>
             </li>
@@ -197,7 +197,7 @@
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <script src="js/app/navigationMenu.js"></script>
-    <script src="js/app/route.js"></script>
+    <script src="js/navigo.min.js"></script>
     <script src="js/app/router.js"></script>
     <script src="js/app/TableRenderer.js"></script>
     <script src="js/app/addStudentDetail.js"></script>
