ui structure for student profile without functionality

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </a>
               <ul class="nav nav-second-level">
                 <li><a href="#">Attendance Data</a></li>
-                <li><a href="#!AddStudent">Student Profile</a></li>
+                <li><a href="#!StudentProfiles">Student Profiles</a></li>
                 <li><a href="#">Students Academics</a></li>
               </ul>
             </li>
@@ -175,7 +175,7 @@
 
         <div class="fh-no-breadcrumb">
           <div class="full-height">
-            <div class="row full-height-scroll white-bg border-left">
+            <div class="row full-height-scroll border-left">
               <div class="col-lg-12" id="app"></div>
             </div>
           </div>
