--- a/index.html
+++ b/index.html
@@ -4,96 +4,150 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Status Book</title>
-
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./css/font-awesome.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
-  <body class="fixed-sidebar no-skin-config full-height-layout">
+  <body class="fixed-sidebar fixed-nav fixed-nav-basic pace-done">
     <div id="wrapper">
       <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
           <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
               <div class="dropdown profile-element">
-                <a href="#">
-                  <span class="block m-t-xs font-bold">Status Book</span>
-                  <span class="text-muted text-xs block">Admin</span>
+                <img
+                  alt="image"
+                  class="rounded-circle"
+                  src="img/profile_small.jpg"
+                />
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                  <span class="block m-t-xs font-bold">Sathishkumar</span>
+                  <span class="text-muted text-xs block">
+                    Super Admin
+                    <b class="caret"></b>
+                  </span>
                 </a>
+                <ul class="dropdown-menu m-t-xs">
+                  <li>
+                    <a class="dropdown-item" href="profile.html">Profile</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="contacts.html">Contacts</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="mailbox.html">Mailbox</a>
+                  </li>
+                  <li class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                </ul>
+              </div>
+              <div class="logo-element">
+                SB
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="#!">
                 <i class="fa fa-th-large"></i>
-                <span class="nav-label m-l-xs">Dashboard</span>
+                <span class="nav-label">Dashboard</span>
+              </a>
+            </li>
+            <li>
+              <a href="layouts.html">
+                <i class="fa fa-diamond"></i>
+                <span class="nav-label">Announcements</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <i class="fa fa-th-large"></i>
-                <span class="nav-label m-l-xs">Announcements</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-th-large"></i>
+                <i class="fa fa-sitemap"></i>
                 <span class="nav-label">Departments</span>
                 <span class="fa arrow"></span>
               </a>
-              <ul class="nav nav-second-level">
-                <li><a href="#">CSE</a></li>
-                <li><a href="#">ECE</a></li>
-                <li><a href="#">EEE</a></li>
-                <li><a href="#">MECH</a></li>
-                <li><a href="#">IT</a></li>
+              <ul class="nav nav-second-level collapse">
+                <li>
+                  <a href="#" id="damian">
+                    B.E / B.Tech
+                    <span class="fa arrow"></span>
+                  </a>
+                  <ul class="nav nav-third-level">
+                    <li>
+                      <a href="#">CSE Dept</a>
+                    </li>
+                    <li>
+                      <a href="#">EEE Dept</a>
+                    </li>
+                    <li>
+                      <a href="#">ECE Dept</a>
+                    </li>
+                    <li>
+                      <a href="#">IT Dept</a>
+                    </li>
+                    <li>
+                      <a href="#">MECH Dept</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#" id="damian">
+                    M.E / M.Tech
+                    <span class="fa arrow"></span>
+                  </a>
+                  <ul class="nav nav-third-level">
+                    <li>
+                      <a href="#">CSE Dept</a>
+                    </li>
+                    <li>
+                      <a href="#">MECH Dept</a>
+                    </li>
+                  </ul>
+                </li>
               </ul>
             </li>
             <li>
-              <a href="#">
-                <i class="fa fa-th-large"></i>
+              <a href="#!">
+                <i class="fa fa-bar-chart-o"></i>
+                <span class="nav-label">Staff</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level collapse">
+                <li><a href="#!">Attendance Data</a></li>
+                <li><a href="#!">Staff Profiles</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#!">
+                <i class="fa fa-bar-chart-o"></i>
+                <span class="nav-label">Student Profiles</span>
+                <span class="fa arrow"></span>
+              </a>
+              <ul class="nav nav-second-level collapse">
+                <li><a href="#!">Attendance Data</a></li>
+                <li><a href="#!">Student Profiles</a></li>
+                <li><a href="#!">Student Academics</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#!">
+                <i class="fa fa-bar-chart-o"></i>
                 <span class="nav-label">Clubs</span>
                 <span class="fa arrow"></span>
               </a>
-              <ul class="nav nav-second-level">
-                <li><a href="#">Club 1</a></li>
-                <li><a href="#">Club 2</a></li>
-                <li><a href="#">Club 3</a></li>
+              <ul class="nav nav-second-level collapse">
+                <li><a href="#!">Club 1</a></li>
+                <li><a href="#!">Club 2</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">
-                <i class="fa fa-th-large"></i>
-                <span class="nav-label">Staffs</span>
-                <span class="fa arrow"></span>
-              </a>
-              <ul class="nav nav-second-level">
-                <li><a href="#">Staff Profiles</a></li>
-                <li><a href="#">Attendance Data</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-th-large"></i>
-                <span class="nav-label">Students</span>
-                <span class="fa arrow"></span>
-              </a>
-              <ul class="nav nav-second-level">
-                <li><a href="#">Attendance Data</a></li>
-                <li><a href="#!StudentProfiles">Student Profiles</a></li>
-                <li><a href="#">Students Academics</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-th-large"></i>
+              <a href="#!">
+                <i class="fa fa-bar-chart-o"></i>
                 <span class="nav-label">Reports</span>
                 <span class="fa arrow"></span>
               </a>
-              <ul class="nav nav-second-level">
-                <li><a href="#">Report 1</a></li>
-                <li><a href="#">Report 2</a></li>
-                <li><a href="#">Report 3</a></li>
-                <li><a href="#">Report 4</a></li>
+              <ul class="nav nav-second-level collapse">
+                <li><a href="#!">Report 1</a></li>
+                <li><a href="#!">Report 2</a></li>
+                <li><a href="#!">Report 3</a></li>
+                <li><a href="#!">Report 4</a></li>
               </ul>
             </li>
           </ul>
@@ -102,35 +156,45 @@
       <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
           <nav
-            class="navbar navbar-static-top"
             role="navigation"
             style="margin-bottom: 0;"
+            class="navbar navbar-fixed-top white-bg"
           >
-            <div>
-              <h3 class="text-bold text-default m-sm">
-                Student Tracker And Testimonial Updates Book
-              </h3>
+            <div class="navbar-header">
+              <a
+                href="#"
+                class="navbar-minimalize minimalize-styl-2 btn btn-primary"
+              >
+                <i class="fa fa-bars"></i>
+              </a>
+              <label class="m-t-sm font-bold" style="padding: 10px;">
+                Students Tracker And Testimonial Updates Book
+              </label>
             </div>
             <ul class="nav navbar-top-links navbar-right">
-              <li>
-                <span class="m-r-sm text-muted welcome-message">
-                  <b>Angel College of Engg & Tech.</b>
+              <li style="padding: 20px;">
+                <span class="m-r-sm text-muted font-bold welcome-message">
+                  Angel College of Engg & Tech.
                 </span>
               </li>
               <li class="dropdown">
-                <button
-                  class="btn btn-primary btn-outline m-r-xs"
-                  class="dropdown-toggle"
+                <a
+                  href="#"
                   data-toggle="dropdown"
+                  class="dropdown-toggle count-info"
                 >
-                  <i class="fa fa-envelope"></i>
-                </button>
-                <ul class="dropdown-menu dropdown-alerts">
+                  <i class="fa fa-bell"></i>
+                  <span class="label label-primary">8</span>
+                </a>
+                <ul class="dropdown-menu dropdown-alerts dropdown-menu-right">
                   <li>
                     <a href="mailbox.html" class="dropdown-item">
                       <div>
-                        <i class="fa fa-envelope fa-fw"></i>
-                        You have 16 messages
+                        <i class="fa fa-envelope fa-fw"></i> You have 16
+                        messages
+                        <span class="float-right text-muted small"
+                          >4 minutes ago</span
+                        >
                       </div>
                     </a>
                   </li>
@@ -139,6 +203,9 @@
                     <a href="profile.html" class="dropdown-item">
                       <div>
                         <i class="fa fa-twitter fa-fw"></i> 3 New Followers
+                        <span class="float-right text-muted small"
+                          >12 minutes ago</span
+                        >
                       </div>
                     </a>
                   </li>
@@ -147,63 +214,49 @@
                     <a href="grid_options.html" class="dropdown-item">
                       <div>
                         <i class="fa fa-upload fa-fw"></i> Server Rebooted
+                        <span class="float-right text-muted small"
+                          >4 minutes ago</span
+                        >
                       </div>
                     </a>
+                  </li>
+                  <li class="dropdown-divider"></li>
+                  <li>
+                    <div class="text-center link-block">
+                      <a href="notifications.html" class="dropdown-item">
+                        <strong>See All Alerts</strong>
+                        <i class="fa fa-angle-right"></i>
+                      </a>
+                    </div>
                   </li>
                 </ul>
               </li>
               <li>
-                <button class="btn btn-primary btn-outline m-r-xs">
-                  <i class="fa fa-cog"></i>
-                </button>
-              </li>
-              <li>
-                <button
-                  class="navbar-minimalize btn btn-primary btn-outline m-r-xs"
-                >
-                  <i class="fa fa-bars"></i>
-                </button>
-              </li>
-              <li>
-                <button class="btn btn-primary btn-outline m-r-md">
-                  <i class="fa fa-sign-out"></i>
-                </button>
+                <a href="login.html">
+                  <i class="fa fa-sign-out"></i> Log out
+                </a>
               </li>
             </ul>
           </nav>
         </div>
-
-        <div class="fh-no-breadcrumb">
-          <div class="full-height">
-            <div class="row full-height-scroll border-left">
-              <div class="col-lg-12" id="app"></div>
-            </div>
-          </div>
-        </div>
-        <div class="footer">
+        <div id="app"></div>
+        <div class="footer fixed">
           <div class="float-right">10GB of <strong>250GB</strong> Free.</div>
-          <div><strong>Copyright</strong> Example Company &copy; 2014-2018</div>
+          <div><strong>Copyright</strong> Example Company &copy; 2019-2020</div>
         </div>
       </div>
     </div>
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
 
-    <!-- Custom and plugin javascript -->
-    <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <!-- Core Library -->
+    <script src="./js/corelib/jquery-3.1.1.min.js"></script>
+    <script src="./js/corelib/popper.min.js"></script>
+    <script src="./js/corelib/bootstrap.js"></script>
+    <!-- Plugins -->
+    <script src="./js/plugins/jquery.metisMenu.js"></script>
+    <script src="./js/plugins/jquery.slimscroll.min.js"></script>
+    <script src="./js/plugins/jquery-ui.min.js"></script>
+    <script src="./js/plugins/pace.min.js"></script>
 
-    <script src="js/navigo.min.js"></script>
-    <script src="js/app/router.js"></script>
-    <script src="js/app/TableRenderer.js"></script>
-    <script src="js/app/addStudentDetail.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/tableResizer.js"></script>
-    <script src="js/app/requestHandler.js"></script>
-    <script src="js/app/viewStudentsDetails.js"></script>
-    <script src="js/app/viewStudentsMarkDetails.js"></script>
+    <script src="./js/app/appUIHandler.js"></script>
   </body>
 </html>
