minor changes in index.html

--- a/index.html
+++ b/index.html
@@ -29,20 +29,17 @@
                 </a>
                 <ul class="dropdown-menu m-t-xs">
                   <li>
-                    <a class="dropdown-item" href="profile.html">Profile</a>
+                    <a class="dropdown-item" href="#!">Profile</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="contacts.html">Contacts</a>
+                    <a class="dropdown-item" href="#!">Contacts</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="mailbox.html">Mailbox</a>
+                    <a class="dropdown-item" href="#!">Mailbox</a>
                   </li>
                   <li class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                  <li><a class="dropdown-item" href="#!">Logout</a></li>
                 </ul>
-              </div>
-              <div class="logo-element">
-                SB
               </div>
             </li>
             <li>
@@ -52,7 +49,7 @@
               </a>
             </li>
             <li>
-              <a href="layouts.html">
+              <a href="#!">
                 <i class="fa fa-diamond"></i>
                 <span class="nav-label">Announcements</span>
               </a>
@@ -188,42 +185,43 @@
                 </a>
                 <ul class="dropdown-menu dropdown-alerts dropdown-menu-right">
                   <li>
-                    <a href="mailbox.html" class="dropdown-item">
+                    <a href="#!" class="dropdown-item">
                       <div>
-                        <i class="fa fa-envelope fa-fw"></i> You have 16
-                        messages
-                        <span class="float-right text-muted small"
-                          >4 minutes ago</span
-                        >
+                        <i class="fa fa-envelope fa-fw"></i>
+                        You have 16 messages
+                        <span class="float-right text-muted small">
+                          4 minutes ago
+                        </span>
                       </div>
                     </a>
                   </li>
                   <li class="dropdown-divider"></li>
                   <li>
-                    <a href="profile.html" class="dropdown-item">
+                    <a href="#!" class="dropdown-item">
                       <div>
                         <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                        <span class="float-right text-muted small"
-                          >12 minutes ago</span
-                        >
+                        <span class="float-right text-muted small">
+                          12 minutes ago
+                        </span>
                       </div>
                     </a>
                   </li>
                   <li class="dropdown-divider"></li>
                   <li>
-                    <a href="grid_options.html" class="dropdown-item">
+                    <a href="#!" class="dropdown-item">
                       <div>
-                        <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                        <span class="float-right text-muted small"
-                          >4 minutes ago</span
-                        >
+                        <i class="fa fa-upload fa-fw"></i>
+                        Server Rebooted
+                        <span class="float-right text-muted small">
+                          4 minutes ago
+                        </span>
                       </div>
                     </a>
                   </li>
                   <li class="dropdown-divider"></li>
                   <li>
                     <div class="text-center link-block">
-                      <a href="notifications.html" class="dropdown-item">
+                      <a href="#!" class="dropdown-item">
                         <strong>See All Alerts</strong>
                         <i class="fa fa-angle-right"></i>
                       </a>
@@ -232,9 +230,7 @@
                 </ul>
               </li>
               <li>
-                <a href="login.html">
-                  <i class="fa fa-sign-out"></i> Log out
-                </a>
+                <a href="#!"><i class="fa fa-sign-out"></i>Log out</a>
               </li>
             </ul>
           </nav>
@@ -242,7 +238,7 @@
         <div id="app"></div>
         <div class="footer fixed">
           <div class="float-right">10GB of <strong>250GB</strong> Free.</div>
-          <div><strong>Copyright</strong> Example Company &copy; 2019-2020</div>
+          <div><strong>Copyright</strong> Status Book &copy; 2019-2020</div>
         </div>
       </div>
     </div>
@@ -256,7 +252,9 @@
     <script src="./js/plugins/jquery.slimscroll.min.js"></script>
     <script src="./js/plugins/jquery-ui.min.js"></script>
     <script src="./js/plugins/pace.min.js"></script>
-
+    <!-- App JS -->
     <script src="./js/app/appUIHandler.js"></script>
+    <script src="./js/app/router.js"></script>
+    <script src="./js/app/app.js"></script>
   </body>
 </html>
