minor corrections in navigation routes

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <span class="fa arrow"></span>
               </a>
               <ul class="nav nav-second-level collapse">
-                <li><a href="#!">Attendance Data</a></li>
-                <li><a href="#!">Student Profiles</a></li>
-                <li><a href="#!">Student Academics</a></li>
+                <li><a href="#!StudentsAttendanceData">Attendance Data</a></li>
+                <li><a href="#!StudentsProfiles">Students Profiles</a></li>
+                <li><a href="#!StudentsAcademics">Students Academics</a></li>
               </ul>
             </li>
             <li>
@@ -247,6 +247,7 @@
     <script src="./js/corelib/jquery-3.1.1.min.js"></script>
     <script src="./js/corelib/popper.min.js"></script>
     <script src="./js/corelib/bootstrap.js"></script>
+    <script src="./js/corelib/navigo.min.js"></script>
     <!-- Plugins -->
     <script src="./js/plugins/jquery.metisMenu.js"></script>
     <script src="./js/plugins/jquery.slimscroll.min.js"></script>
