basic ui design for student profile has been done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img
                   alt="image"
                   class="rounded-circle"
-                  src="img/profile_small.jpg"
+                  src="./img/profile_small.png"
                 />
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                   <span class="block m-t-xs font-bold">Sathishkumar</span>
@@ -56,7 +56,7 @@
             </li>
             <li>
               <a href="#">
-                <i class="fa fa-sitemap"></i>
+                <i class="fa fa-institution"></i>
                 <span class="nav-label">Departments</span>
                 <span class="fa arrow"></span>
               </a>
@@ -102,7 +102,7 @@
             </li>
             <li>
               <a href="#!">
-                <i class="fa fa-bar-chart-o"></i>
+                <i class="fa fa-sitemap"></i>
                 <span class="nav-label">Staff</span>
                 <span class="fa arrow"></span>
               </a>
@@ -113,7 +113,7 @@
             </li>
             <li>
               <a href="#!">
-                <i class="fa fa-bar-chart-o"></i>
+                <i class="fa fa-group"></i>
                 <span class="nav-label">Student Profiles</span>
                 <span class="fa arrow"></span>
               </a>
@@ -125,7 +125,7 @@
             </li>
             <li>
               <a href="#!">
-                <i class="fa fa-bar-chart-o"></i>
+                <i class="fa fa-handshake-o"></i>
                 <span class="nav-label">Clubs</span>
                 <span class="fa arrow"></span>
               </a>
@@ -236,6 +236,7 @@
           </nav>
         </div>
         <div id="app"></div>
+
         <div class="footer fixed">
           <div class="float-right">10GB of <strong>250GB</strong> Free.</div>
           <div><strong>Copyright</strong> Status Book &copy; 2019-2020</div>
