UI for students academic details has been done

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <ul class="nav nav-second-level collapse">
                 <li><a href="#!StudentsAttendanceData">Attendance Data</a></li>
                 <li><a href="#!StudentsProfiles">Students Profiles</a></li>
-                <li><a href="#!StudentsAcademics">Students Academics</a></li>
+                <li><a href="#!StudentsAcademicData">Students Academics</a></li>
               </ul>
             </li>
             <li>
