--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </a>
               <ul class="nav nav-second-level collapse">
                 <li><a href="#!StudentsAttendanceData">Attendance Data</a></li>
-                <li><a href="#!StudentsProfiles">Students Profiles</a></li>
+                <li><a href="#!StudentsProfileList">Students Profiles</a></li>
                 <li><a href="#!StudentsAcademicData">Students Academics</a></li>
               </ul>
             </li>
@@ -249,6 +249,7 @@
     <script src="./js/corelib/popper.min.js"></script>
     <script src="./js/corelib/bootstrap.js"></script>
     <script src="./js/corelib/navigo.min.js"></script>
+    <script src="./js/corelib/apexcharts.js"></script>
     <!-- Plugins -->
     <script src="./js/plugins/jquery.metisMenu.js"></script>
     <script src="./js/plugins/jquery.slimscroll.min.js"></script>
