change navigation in students menu

--- a/index.html
+++ b/index.html
@@ -114,13 +114,16 @@
             <li>
               <a href="#!">
                 <i class="fa fa-group"></i>
-                <span class="nav-label">Student Profiles</span>
+                <span class="nav-label">Student Details</span>
                 <span class="fa arrow"></span>
               </a>
               <ul class="nav nav-second-level collapse">
-                <li><a href="#!StudentsAttendanceData">Attendance Data</a></li>
-                <li><a href="#!StudentsProfileList">Students Profiles</a></li>
-                <li><a href="#!StudentsAcademicData">Students Academics</a></li>
+                <li>
+                  <a href="#!StudentsProfileList/be-btech">B.E / B.Tech</a>
+                </li>
+                <li>
+                  <a href="#!StudentsProfileList/me-mtech">M.E / M.Tech</a>
+                </li>
               </ul>
             </li>
             <li>
